--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     },
     "dependencies": {
         "@inertiajs/inertia": "^0.11.1",
-        "react-router-dom": "^7.1.1"
+        "i18next": "^24.2.1",
+        "i18next-http-backend": "^3.0.1",
+        "react-i18next": "^15.4.0",
+        "react-router-dom": "^7.1.1",
+        "sweetalert2": "^11.15.10"
     }
 }
