--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -5,8 +5,11 @@ services:
     volumes:
       - ./:/var/www/
       - ./docker/nginx/conf.d/:/etc/nginx/conf.d/
+      - /etc/letsencrypt:/etc/letsencrypt:ro
+      - ./logs/nginx:/var/log/nginx
     ports:
       - "80:80"
+      - "443:443"
     container_name: quizzes_nginx
     depends_on:
       - app
