--- a/docker/nginx/conf.d/nginx.conf
+++ b/docker/nginx/conf.d/nginx.conf
@@ -1,6 +1,18 @@
 server {
+    listen 80;
+    server_name quizzes.mysticvillage.org;
+
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name quizzes.mysticvillage.org;
 
     root /var/www/public;
+
+    ssl_certificate /etc/letsencrypt/live/quizzes.mysticvillage.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/quizzes.mysticvillage.org/privkey.pem;
 
     location / {
         try_files $uri /index.php;
